tests/fixtures/invalid/min_float_set.py
# Cannot call min() with Float, Set[int]
x = min(1.0, {1, 2, 3})
